# Indie-Studio

./: .gitignore  CMakeLists.old.txt  CMakeLists.txt  Makefile  cpp_indie_studio.cbp  update
Assets/Models/: 0113.x  0113.xml  0114.x  0114.xml  0115.x  0115.xml  0116.x  0116.xml  player.x
Include/: AI.hpp  APlayer.hpp  ActionManager.hpp  Bomb.hpp  BomberMan.hpp  Clock.hpp  Cube.hpp  Game.hpp  GraphicManager.hpp  KeySet.hpp  Map.hpp  Menu.hpp  ParticleFire.hpp  Player.hpp  SoundManager.hpp  Sphere.hpp
Include/Mini/: IMiniActionMgr.hpp  IMiniAudioMgr.hpp  IMiniCore.hpp  IMiniVideoMgr.hpp  MiniActionMgr.hpp  MiniAudioMgr.hpp  MiniBase.hpp  MiniBomb.hpp  MiniCore.hpp  MiniDino.hpp  MiniPlayer.hpp  MiniRectangle.hpp  MiniScene.hpp  MiniSceneBomber.hpp  MiniSceneGame.hpp  MiniSceneIntro.hpp  MiniSceneKonami.hpp  MiniSceneMenu.hpp  MiniSceneOptions.hpp  MiniScenePlayers.hpp  MiniSceneVictory.hpp  MiniSprite.hpp  MiniVideoMgr.hpp
Include/PowerUp/: APowerUp.hpp  BombUp.hpp  FireUp.hpp  FullFire.hpp  IPowerUp.hpp  LifeUp.hpp  PierceUp.hpp  PowerUpFactory.hpp  SpeedUp.hpp  WallPass.hpp
Src/: AI.cpp  APlayer.cpp  ActionManager.cpp  Bomb.cpp  BomberMan.cpp  Clock.cpp  Cube.cpp  Game.cpp  GraphicManager.cpp  KeySet.cpp  Main.cpp  Map.cpp  Menu.cpp  OldMain.cpp  ParticleFire.cpp  Player.cpp  SoundManager.cpp  Sphere.cpp
Src/Mini/: MiniActionMgr.cpp  MiniAudioMgr.cpp  MiniCore.cpp  MiniMain.cpp  MiniRectangle.cpp  MiniScene.cpp  MiniSceneBomber.cpp  MiniSceneIntro.cpp  MiniSceneKonami.cpp  MiniSceneMenu.cpp  MiniSceneOptions.cpp  MiniScenePlayers.cpp  MiniSceneVictory.cpp  MiniSprite.cpp  MiniVideoMgr.cpp
Src/PowerUp/: APowerUp.cpp  BombUp.cpp  FireUp.cpp  FullFire.cpp  LifeUp.cpp  PierceUp.cpp  PowerUpFactory.cpp  SpeedUp.cpp  WallPass.cpp
cmake/: FindIrrlicht.cmake
